--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ main {
 }
 
 .write-btn {
-  background-color: #fe6f0f;
+  background-color: var(--button-primary);
   color: white;
   position: fixed;
   bottom: 120px;
@@ -51,4 +51,10 @@ main {
   border-radius: 25px;
   right: 20px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  cursor: pointer;
+  transition: all 1s ease-in-out;
+}
+
+.write-btn:hover {
+  background-color: var(--button-hover);
 }
