--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 :root {
   --button-primary: rgb(254, 111, 15);
-  --button-hover: rgba(254, 111, 15, 0, 8);
+  --button-hover: rgba(254, 111, 15, 0.8);
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo",
